--- a/src/smriti/templates/smriti/browse.html
+++ b/src/smriti/templates/smriti/browse.html
@@ -13,7 +13,7 @@
         <div class="input-field col s12 m8 offset-l2">
 
             <i class="material-icons prefix">search</i>
-             <input id="icon_prefix" type="text" class="validate">
+             <input id="icon_prefix" type="text" name="search_param" class="validate">
              <label for="icon_prefix">Search for the Name/Roll No</label>
          </div>
         </div>
