Write template and backend

--- a/src/smriti/templates/smriti/testimonial.html
+++ b/src/smriti/templates/smriti/testimonial.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="divider teal"></div>
                     <div class="flow-text container" style="padding:20px">
-                        {{testimonial.description|markdown|truncatechars_html:200}}
+                        {{testimonial.description|markdown}}
                     </div>
 				</div>
 		</div>
