--- a/src/smriti/templates/smriti/testimonial.html
+++ b/src/smriti/templates/smriti/testimonial.html
@@ -26,6 +26,11 @@
                         <div class="col s8">
                             <h4>{{testimonial.created_by.profile.user.get_full_name}}</h4>
                         </div>
+                        <div class="col s2">
+                            {% if user == testimonial.created_by %}
+                            <a class="btn-floating btn-large waves-effect waves-light teal lighten-3" href="/smriti/write/{{testimonial.testimonial_to.profile.rollno}}"><i class="material-icons">mode_edit</i></a>
+                            {% endif %}
+                        </div>
                         </div>
                     </div>
                     <div class="divider teal"></div>
