--- a/src/smriti/templates/smriti/home.html
+++ b/src/smriti/templates/smriti/home.html
@@ -11,7 +11,12 @@
             <img class="circle responsive-img" src={% if profile.picture %}"/media/{{profile.picture}}" {% else %}  "/static/site/img/presi.jpg" {% endif %}>
         </div>
         <div class="col s6">
+        <div class="row">
             <h4>{{profile.user.get_full_name}}</h4>
+        </div>
+        <div class="row">
+            <p>{{profile.bio}}</p>
+        </div>
         </div>
         <div class="col s2">
             {% if user != profile.user %}
