Link to browse from index

--- a/src/smriti/templates/smriti/index.html
+++ b/src/smriti/templates/smriti/index.html
@@ -28,9 +28,9 @@
         </div>
 
         <div class="container center input-field">
-                <button class="btn-large waves-effect waves-light green-lighten-2">
+                <a class="btn-large waves-effect waves-light green-lighten-2" href="/smriti/browse">
                     Browse Testimonials
-                </button>
+                </a>
         </div>
     </div>
 </div>
