--- a/src/templates/static.html
+++ b/src/templates/static.html
@@ -56,6 +56,7 @@
 		<li><a href="/nitk_life">NITK Life</a></li>
 		<li><a href="/blog">Literary Archive</a></li>
 		<li><a href="/resources">Resources</a></li>
+		<li><a href="/faq">FAQs</a></li>
 	</ul>
 	<div class="navbar-fixed">
 		<nav class="black" role="navigation">
@@ -71,7 +72,7 @@
 					<li><a class="dropdown-button" href="#!" data-activates="dropdown2">Academics<i class="material-icons right">arrow_drop_down</i></a></li>
 					<li><a class="dropdown-button" href="#!" data-activates="dropdown3">News and Events<i class="material-icons right">arrow_drop_down</i></a></li>
 					<li><a class="dropdown-button" href="#!" data-activates="dropdown4">Students' Life<i class="material-icons right">arrow_drop_down</i></a></li>
-					<li><a href="/faq">FAQs</a></li>
+					<li><a href="/smriti">Smriti</a></li>
 				</ul>
 				<ul id="slide-out" class="side-nav collapsible collapsible-accordion">
 					<li class="bold"><a class="collapsible-header waves-effect waves-teal">Student Council</a>
@@ -117,6 +118,7 @@
 					<li class="bold"><a href="/blog" class="collapsible-header waves-effect waves-teal">Literary Archive</a></li>
 					<li class="bold"><a href="/resources" class="collapsible-header waves-effect waves-teal">Resources</a></li>
 					<li class="bold"><a href="/faq" class="collapsible-header waves-effect waves-teal">FAQs</a></li>
+					<li class="bold"><a href="/smriti" class="collapsible-header waves-effect waves-teal">Smriti</a></li>
 				</ul>
 				<a href="" id="sidenav" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 			</div>
