--- a/src/templates/message.html
+++ b/src/templates/message.html
@@ -1,4 +1,6 @@
 {% extends "static.html" %}
+{% load django_markdown %}
+
 
 {% block page-info %}
 <div class="container">
@@ -16,30 +18,42 @@
 {% load static %}
 <link href="{% static 'site/css/message.css' %}" rel="stylesheet">
 
-<div class="container">
-    <div class="row valign-wrapper">
-        <div class="col s4">
-              <img class="responsive-img" src="{% static 'site/img/presi.jpg' %}">
-        </div>
-        <div class="col s8">
-            <h4>Anirudh Ganesh</h4>
+<div class="row">
+
+	<div  id="page-tabs" class="row">
+        <div class="col s12">
+          <ul class="tabs blue-text text-darken-2" >
+
+            {% for item in messages %}
+            <li class="tab"><a href="#{{item.year|date:"Y"}}">{{item.year|date:"Y"}}</a></li>
+            {% endfor %}
+
+          </ul>
         </div>
 
     </div>
-    <div class="row flow-text">
-    <!--     <div class="row">
-        <div class="col s8 push-s2"> -->
-    <article >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    </article>
-    <br />
-    <article>
-        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-    </article>
-    <br />
-    <article>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    </article>
-    <!--         </div>
-    </div> -->
+
+    {% for item in messages %}
+    <div id="{{item.year|date:"Y"}}" class="container">
+        <div class="row valign-wrapper">
+            <div class="col s4">
+                  <img class="responsive-img" src="/media/{{item.pic}}">
+            </div>
+            <div class="col s8">
+                <h4>{{item.name}}</h4>
+            </div>
+
+        </div>
+        <div class="row flow-text">
+        <!--     <div class="row">
+            <div class="col s8 push-s2"> -->
+        <article >
+          {{item.message|markdown}}
+        </article>
+        <!--         </div>
+        </div> -->
+        </div>
     </div>
+    {% endfor %}
 </div>
 {% endblock %}
