Login/Logout based on authentication status

--- a/src/smriti/templates/smriti/base.html
+++ b/src/smriti/templates/smriti/base.html
@@ -33,12 +33,20 @@
 				<ul class="right hide-on-med-and-down">
 					<li><a href="/smriti/home">My Testimonials</a></li>
 					<li><a href="/smriti/browse">Browse</a></li>
+					{% if user.is_authenticated %}
 					<li><a href="/logout">Logout</a></li>
+					{%else%}
+					<li><a href="/smriti/">Login</a></li>
+					{%endif%}
 				</ul>
 				<ul id="slide-out" class="side-nav collapsible collapsible-accordion">
 					<li class="bold"><a href="/smriti/home" class="collapsible-header waves-effect waves-teal">My Testimonials</a></li>
 					<li class="bold"><a href="/smriti/browse" class="collapsible-header waves-effect waves-teal">Browse</a></li>
+					{% if user.is_authenticated %}
 					<li class="bold"><a href="/logout" class="collapsible-header waves-effect waves-teal">Logout</a></li>
+					{%else%}
+					<li class="bold"><a href="/smriti/" class="collapsible-header waves-effect waves-teal">Login</a></li>
+					{%endif%}
 				</ul>
 				<a href="" id="sidenav" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 			</div>
