Fix font awesome

--- a/src/smriti/templates/smriti/base.html
+++ b/src/smriti/templates/smriti/base.html
@@ -15,6 +15,7 @@
 	{% block styles %}
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
 	<link href="{% static 'site/css/smriti.css' %}" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	{% endblock styles %}
 
 	<!-- Custom tags for the head tag -->
