--- a/src/smriti/templates/smriti/base.html
+++ b/src/smriti/templates/smriti/base.html
@@ -33,6 +33,7 @@
 				</a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="/smriti/home">My Testimonials</a></li>
+					<li><a href="/smriti/feed">Feed</a></li>
 					<li><a href="/smriti/browse">Browse</a></li>
 					{% if user.is_authenticated %}
 					<li><a href="/logout">Logout</a></li>
@@ -42,6 +43,7 @@
 				</ul>
 				<ul id="slide-out" class="side-nav collapsible collapsible-accordion">
 					<li class="bold"><a href="/smriti/home" class="collapsible-header waves-effect waves-teal">My Testimonials</a></li>
+					<li class="bold"><a href="/smriti/feed" class="collapsible-header waves-effect waves-teal">Feed</a></li>
 					<li class="bold"><a href="/smriti/browse" class="collapsible-header waves-effect waves-teal">Browse</a></li>
 					{% if user.is_authenticated %}
 					<li class="bold"><a href="/logout" class="collapsible-header waves-effect waves-teal">Logout</a></li>
