--- a/src/templates/represent.html
+++ b/src/templates/represent.html
@@ -29,7 +29,7 @@
     })
   </script>
     <div>
-    <h3 class="center-align">POSITION HOLDERS</h3>
+    <h3 class="center-align">CORE MEMBERS</h3>
     </div>
     <div class="container">
      <div class="row center-align">
@@ -49,13 +49,13 @@
       <div class="col s12 m6">
        <div class="card-panel grey lighten-4 small">
            <div class="card-image">
-             <span class="card-title" style="font-weight:bold;font-size:24px;">GIRLS REP</span><br><br>
-             <img class="circle responsive-img" src="/media/{{grep.prof_pic}}" style="width:160px;height:160px;"></img>
+             <span class="card-title" style="font-weight:bold;font-size:24px;">VICE PRESIDENT</span><br><br>
+             <img class="circle responsive-img" src="/media/{{vpresi.prof_pic}}" style="width:160px;height:160px;"></img>
            </div>
            <div class="card-content">
-           <br><p style="font-size:18px;">{{grep.name}}</p>
-           <p>{{grep.phone_number}}</p>
-           <p><a href="mailto:{{grep.email}}">{{grep.email}}</a></p>
+           <br><p style="font-size:18px;">{{vpresi.name}}</p>
+           <p>{{vpresi.phone_number}}</p>
+           <p><a href="mailto:{{vpresi.email}}">{{vpresi.email}}</a></p>
            </div>
        </div>
      </div>
@@ -75,33 +75,33 @@
       <div class="col s12 m6">
         <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">JOINT SECRETARY</span><br><br>
+              <span class="card-title" style="font-weight:bold;font-size:24px;">JOINT SECRETARY UG</span><br><br>
               <img class="circle responsive-img" src="/media/{{jsec.prof_pic}}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
-            <br><p style="font-size:18px;">{{jsec.name}}</p>
-            <p>{{jsec.phone_number}}</p>
-            <p><a href="mailto:{{sec.email}}">{{jsec.email}}</a></p>
+            <br><p style="font-size:18px;">{{jsecu.name}}</p>
+            <p>{{jsecu.phone_number}}</p>
+            <p><a href="mailto:{{jsecu.email}}">{{jsecu.email}}</a></p>
             </div>
         </div>
       </div>
       <div class="col s12 m6">
         <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">PG REP</span><br><br>
-              <img class="circle responsive-img" src="/media/{{pgrep.prof_pic}}" style="width:160px;height:160px;"></img>
+              <span class="card-title" style="font-weight:bold;font-size:24px;">JOINT SECRETARY PG/PhD</span><br><br>
+              <img class="circle responsive-img" src="/media/{{jsec.prof_pic}}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
-            <br><p style="font-size:18px;">{{pgrep.name}}</p>
-            <p>{{pgrep.phone_number}}</p>
-            <p><a href="mailto:{{pgrep.email}}">{{pgrep.email}}</a></p>
+            <br><p style="font-size:18px;">{{jsecp.name}}</p>
+            <p>{{jsecp.phone_number}}</p>
+            <p><a href="mailto:{{jsecp.email}}">{{jsecp.email}}</a></p>
             </div>
         </div>
       </div>
       <div class="col s12 m6">
         <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">PG GIRLS REP</span><br><br>
+              <span class="card-title" style="font-weight:bold;font-size:24px;">PG/PhD GIRLS REPRESENTATIVE</span><br><br>
               <img class="circle responsive-img" src="/media/{{pggrep.prof_pic}}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
@@ -111,68 +111,32 @@
             </div>
         </div>
       </div>
-      <div class="col s12 m6">
-        <div class="card-panel grey lighten-4 small">
-            <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">ENGI-CON</span><br><br>
-              <img class="circle responsive-img" src="/media/{{engi.prof_pic}}" style="width:160px;height:160px;"></img>
-            </div>
-            <div class="card-content">
-            <br><p style="font-size:18px;">{{engi.name}}</p>
-            <p>{{engi.phone_number}}</p>
-            <p><a href="mailto:{{engi.email}}">{{engi.email}}</a></p>
-            </div>
-        </div>
-      </div>
-      <div class="col s12 m6">
-        <div class="card-panel grey lighten-4 small">
-            <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">INCI-CON</span><br><br>
-              <img class="circle responsive-img" src="/media/{{inci.prof_pic}}" style="width:160px;height:160px;"></img>
-            </div>
-            <div class="card-content">
-            <br><p style="font-size:18px;">{{inci.name}}</p>
-            <p>{{inci.phone_number}}</p>
-            <p><a href="mailto:{{inci.email}}">{{inci.email}}</a></p>
-            </div>
-        </div>
-      </div>
-      <div class="col s12 m6">
-        <div class="card-panel grey lighten-4 small">
-            <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">ENGI-TREASURER</span><br><br>
-              <img class="circle responsive-img" src="/media/{{engit.prof_pic}}" style="width:160px;height:160px;"></img>
-            </div>
-            <div class="card-content">
-            <br><p style="font-size:18px;">{{engit.name}}</p>
-            <p>{{engit.phone_number}}</p>
-            <p><a href="mailto:{{engi.email}}">{{engit.email}}</a></p>
-            </div>
-        </div>
-      </div>
-      <div class="col s12 m6">
-        <div class="card-panel grey lighten-4 small">
-            <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">INCI-TREASURER</span><br><br>
-              <img class="circle responsive-img" src="/media/{{incit.prof_pic}}" style="width:160px;height:160px;"></img>
-            </div>
-            <div class="card-content">
-            <br><p style="font-size:18px;">{{incit.name}}</p>
-            <p>{{incit.phone_number}}</p>
-            <p><a href="mailto:{{engi.email}}">{{incit.email}}</a></p>
-            </div>
-        </div>
-      </div>
-
      </div>
     </div>
-    <h3 class="center-align">CLASS REPESENTATIVES</h3>
-     <div class="row container">
+    <h3 class="center-align">CLASS REPRESENTATIVES</h3>
+     <!--div class="row container">
     <button class="col s12 m12 l12 btn-large waves-effect waves-light red darken-1" id="showbtech">B TECH</button>
-    </div>
+  </div-->
     <div class="row container">
       <div class="col s12 m12 l12" id="btech">
        <ul class="collapsible" data-collapsible="accordion">
+         <li>
+             <div class="collapsible-header"><i class=" material-icons">list</i>PG/PhD Department Representatives
+             </div>
+             <div class="collapsible-body">
+               <ul class="collection">
+                 {% for item in pgphd %}
+                 <li class="collection-item avatar" style="padding-left:80px">
+                   <img class="biggercircle" src="/media/{{item.prof_pic}}"/>
+                   <br>
+                   <span class="title">{{item.name}}</span>
+                   <br>  {{item.get_branch_display}}
+                   <div class="secondary-content">{{item.email}}<br>{{item.phone_number}}</div><br>
+                 </li>
+                 {% endfor %}
+               </ul>
+             </div>
+         </li>
           <li>
               <div class="collapsible-header"><i class=" material-icons">list</i>Final Years
               </div>
@@ -246,6 +210,5 @@
           </li>
        </ul>
       </div>
-    </div>
 
   {% endblock %}
