Changing Meet the Reps Structure

--- a/src/templates/represent.html
+++ b/src/templates/represent.html
@@ -113,10 +113,10 @@
       </div>
      </div>
     </div>
-    <h3 class="center-align">CLASS REPRESENTATIVES</h3>
-     <!--div class="row container">
+    <!--h3 class="center-align">CLASS REPRESENTATIVES</h3>
+     <div class="row container">
     <button class="col s12 m12 l12 btn-large waves-effect waves-light red darken-1" id="showbtech">B TECH</button>
-  </div-->
+  </div>
     <div class="row container">
       <div class="col s12 m12 l12" id="btech">
        <ul class="collapsible" data-collapsible="accordion">
@@ -209,6 +209,6 @@
               </div>
           </li>
        </ul>
-      </div>
+     </div-->
 
   {% endblock %}
