Meet the Reps modified - With new SC and added PG and PhD

--- a/src/templates/represent.html
+++ b/src/templates/represent.html
@@ -31,12 +31,11 @@
     <div>
     <h3 class="center-align">CORE MEMBERS</h3>
     </div>
-    <div class="container">
      <div class="row center-align">
-      <div class="col s12 m6">
+      <div class="col s12 m4">
         <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">PRESIDENT</span><br><br>
+              <span class="card-title" style="font-weight:bold;font-size:20px;">PRESIDENT</span><br><br>
               <img class="circle responsive-img" src="/media/{{presi.prof_pic}}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
@@ -46,10 +45,10 @@
             </div>
         </div>
       </div>
-      <div class="col s12 m6">
+      <div class="col s12 m4">
        <div class="card-panel grey lighten-4 small">
            <div class="card-image">
-             <span class="card-title" style="font-weight:bold;font-size:24px;">VICE PRESIDENT</span><br><br>
+             <span class="card-title" style="font-weight:bold;font-size:20px;">VICE PRESIDENT</span><br><br>
              <img class="circle responsive-img" src="/media/{{vpresi.prof_pic}}" style="width:160px;height:160px;"></img>
            </div>
            <div class="card-content">
@@ -59,10 +58,10 @@
            </div>
        </div>
      </div>
-      <div class="col s12 m6">
+      <div class="col s12 m4">
         <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">GENERAL SECRETARY</span><br><br>
+              <span class="card-title" style="font-weight:bold;font-size:20px;">GENERAL SECRETARY</span><br><br>
               <img class="circle responsive-img" src="/media/{{sec.prof_pic}}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
@@ -72,10 +71,10 @@
             </div>
         </div>
       </div>
-      <div class="col s12 m6">
+      <div class="col s12 m4">
         <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">JOINT SECRETARY UG</span><br><br>
+              <span class="card-title" style="font-weight:bold;font-size:20px;">JOINT SECRETARY UG</span><br><br>
               <img class="circle responsive-img" src="/media/{{jsec.prof_pic}}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
@@ -85,10 +84,10 @@
             </div>
         </div>
       </div>
-      <div class="col s12 m6">
+      <div class="col s12 m4">
         <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">JOINT SECRETARY PG/PhD</span><br><br>
+              <span class="card-title" style="font-weight:bold;font-size:20px;">JOINT SECRETARY PG/PhD</span><br><br>
               <img class="circle responsive-img" src="/media/{{jsec.prof_pic}}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
@@ -98,10 +97,10 @@
             </div>
         </div>
       </div>
-      <div class="col s12 m6">
+      <div class="col s12 m4">
         <div class="card-panel grey lighten-4 small">
             <div class="card-image">
-              <span class="card-title" style="font-weight:bold;font-size:24px;">PG/PhD GIRLS REPRESENTATIVE</span><br><br>
+              <span class="card-title" style="font-weight:bold;font-size:20px;">PG/PhD GIRLS REP</span><br><br>
               <img class="circle responsive-img" src="/media/{{pggrep.prof_pic}}" style="width:160px;height:160px;"></img>
             </div>
             <div class="card-content">
@@ -111,21 +110,162 @@
             </div>
         </div>
       </div>
-     </div>
     </div>
-    <!--h3 class="center-align">CLASS REPRESENTATIVES</h3>
+    <div>
+    <h3 class="center-align">TEAM ENGINEER</h3>
+    </div>
+     <div class="row center-align">
+      <div class="col s12 m4">
+        <div class="card-panel grey lighten-4 small">
+            <div class="card-image">
+              <span class="card-title" style="font-weight:bold;font-size:20px;">CONVENOR</span><br><br>
+              <img class="circle responsive-img" src="/media/{{presi.prof_pic}}" style="width:160px;height:160px;"></img>
+            </div>
+            <div class="card-content">
+            <br><p style="font-size:18px;">{{engi.name}}</p>
+            <p>{{engi.phone_number}}</p>
+            <p><a href="mailto:{{engi.email}}">{{engi.email}}</a></p>
+            </div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+       <div class="card-panel grey lighten-4 small">
+           <div class="card-image">
+             <span class="card-title" style="font-weight:bold;font-size:20px;">TREASURER</span><br><br>
+             <img class="circle responsive-img" src="/media/{{vpresi.prof_pic}}" style="width:160px;height:160px;"></img>
+           </div>
+           <div class="card-content">
+           <br><p style="font-size:18px;">{{engit.name}}</p>
+           <p>{{engit.phone_number}}</p>
+           <p><a href="mailto:{{engit.email}}">{{engit.email}}</a></p>
+           </div>
+       </div>
+     </div>
+      <div class="col s12 m4">
+        <div class="card-panel grey lighten-4 small">
+            <div class="card-image">
+              <span class="card-title" style="font-weight:bold;font-size:20px;">JOINT CONVENOR</span><br><br>
+              <img class="circle responsive-img" src="/media/{{sec.prof_pic}}" style="width:160px;height:160px;"></img>
+            </div>
+            <div class="card-content">
+            <br><p style="font-size:18px;">{{engij.name}}</p>
+            <p>{{engij.phone_number}}</p>
+            <p><a href="mailto:{{engij.email}}">{{engij.email}}</a></p>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div>
+    <h3 class="center-align">TEAM INCIDENT</h3>
+    </div>
+     <div class="row center-align">
+      <div class="col s12 m4">
+        <div class="card-panel grey lighten-4 small">
+            <div class="card-image">
+              <span class="card-title" style="font-weight:bold;font-size:20px;">CONVENOR</span><br><br>
+              <img class="circle responsive-img" src="/media/{{presi.prof_pic}}" style="width:160px;height:160px;"></img>
+            </div>
+            <div class="card-content">
+            <br><p style="font-size:18px;">{{inci.name}}</p>
+            <p>{{inci.phone_number}}</p>
+            <p><a href="mailto:{{inci.email}}">{{inci.email}}</a></p>
+            </div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+       <div class="card-panel grey lighten-4 small">
+           <div class="card-image">
+             <span class="card-title" style="font-weight:bold;font-size:20px;">TREASURER</span><br><br>
+             <img class="circle responsive-img" src="/media/{{vpresi.prof_pic}}" style="width:160px;height:160px;"></img>
+           </div>
+           <div class="card-content">
+           <br><p style="font-size:18px;">{{incit.name}}</p>
+           <p>{{incit.phone_number}}</p>
+           <p><a href="mailto:{{incit.email}}">{{incit.email}}</a></p>
+           </div>
+       </div>
+     </div>
+      <div class="col s12 m4">
+        <div class="card-panel grey lighten-4 small">
+            <div class="card-image">
+              <span class="card-title" style="font-weight:bold;font-size:20px;">JOINT CONVENOR</span><br><br>
+              <img class="circle responsive-img" src="/media/{{sec.prof_pic}}" style="width:160px;height:160px;"></img>
+            </div>
+            <div class="card-content">
+            <br><p style="font-size:18px;">{{incij.name}}</p>
+            <p>{{incij.phone_number}}</p>
+            <p><a href="mailto:{{incij.email}}">{{incij.email}}</a></p>
+            </div>
+        </div>
+      </div>
+    </div>
+    <h3 class="center-align">SECRETARIES</h3>
      <div class="row container">
-    <button class="col s12 m12 l12 btn-large waves-effect waves-light red darken-1" id="showbtech">B TECH</button>
+    <button class="col s12 m12 l12 btn-large waves-effect waves-light red darken-1" id="showbtech">TECHNICAL & CULTURAL SECRETARIES</button>
   </div>
     <div class="row container">
       <div class="col s12 m12 l12" id="btech">
        <ul class="collapsible" data-collapsible="accordion">
          <li>
-             <div class="collapsible-header"><i class=" material-icons">list</i>PG/PhD Department Representatives
+             <div class="collapsible-header"><i class=" material-icons">list</i>Technical Secretaries
              </div>
              <div class="collapsible-body">
                <ul class="collection">
-                 {% for item in pgphd %}
+                 <li class="collection-item avatar" style="padding-left:80px">
+                   <img class="biggercircle" src="/media/{{item.prof_pic}}"/>
+                   <br>
+                   <span class="title">{{techp.name}}</span>
+                   <br>  Technical Secretary PG
+                   <div class="secondary-content">{{techp.email}}<br>{{techp.phone_number}}</div><br>
+                 </li>
+                 <li class="collection-item avatar" style="padding-left:80px">
+                   <img class="biggercircle" src="/media/{{item.prof_pic}}"/>
+                   <br>
+                   <span class="title">{{techu.name}}</span>
+                   <br>  Technical Secretary UG
+                   <div class="secondary-content">{{techu.email}}<br>{{techu.phone_number}}</div><br>
+                 </li>
+               </ul>
+             </div>
+         </li>
+          <li>
+              <div class="collapsible-header"><i class=" material-icons">list</i>Cultural Secretaries
+              </div>
+              <div class="collapsible-body">
+                <ul class="collection">
+                  <li class="collection-item avatar" style="padding-left:80px">
+                    <img class="biggercircle" src="/media/{{item.prof_pic}}"/>
+                    <br>
+                    <span class="title">{{cultp.name}}</span>
+                    <br>  Cultural Secretary PG
+                    <div class="secondary-content">{{cultp.email}}<br>{{cultp.phone_number}}</div><br>
+                  </li>
+                  <li class="collection-item avatar" style="padding-left:80px">
+                    <img class="biggercircle" src="/media/{{item.prof_pic}}"/>
+                    <br>
+                    <span class="title">{{cultu.name}}</span>
+                    <br>  Cultural Secretary UG
+                    <div class="secondary-content">{{cultu.email}}<br>{{cultu.phone_number}}</div><br>
+                  </li>
+                </ul>
+              </div>
+          </li>
+          </ul>
+        </div>
+     </div>
+    <h3 class="center-align">CLASS REPRESENTATIVES</h3>
+     <div class="row container">
+    <button class="col s12 m12 l12 btn-large waves-effect waves-light red darken-1" id="showbtech">PhD</button>
+    </div>
+    <div class="row container">
+      <div class="col s12 m12 l12" id="btech">
+       <ul class="collapsible" data-collapsible="accordion">
+         <li>
+             <div class="collapsible-header"><i class=" material-icons">list</i>PhD Department Representatives
+             </div>
+             <div class="collapsible-body">
+               <ul class="collection">
+                 {% for item in phd %}
                  <li class="collection-item avatar" style="padding-left:80px">
                    <img class="biggercircle" src="/media/{{item.prof_pic}}"/>
                    <br>
@@ -137,6 +277,41 @@
                </ul>
              </div>
          </li>
+       </ul>
+      </div>
+    </div>
+     <div class="row container">
+    <button class="col s12 m12 l12 btn-large waves-effect waves-light red darken-1" id="showbtech">PG</button>
+    </div>
+    <div class="row container">
+      <div class="col s12 m12 l12" id="btech">
+       <ul class="collapsible" data-collapsible="accordion">
+         <li>
+             <div class="collapsible-header"><i class=" material-icons">list</i>PG Department Representatives
+             </div>
+             <div class="collapsible-body">
+               <ul class="collection">
+                 {% for item in pg %}
+                 <li class="collection-item avatar" style="padding-left:80px">
+                   <img class="biggercircle" src="/media/{{item.prof_pic}}"/>
+                   <br>
+                   <span class="title">{{item.name}}</span>
+                   <br>  {{item.get_branch_display}}
+                   <div class="secondary-content">{{item.email}}<br>{{item.phone_number}}</div><br>
+                 </li>
+                 {% endfor %}
+               </ul>
+             </div>
+         </li>
+        </ul>
+      </div>
+     </div>
+     <div class="row container">
+    <button class="col s12 m12 l12 btn-large waves-effect waves-light red darken-1" id="showbtech">UG</button>
+    </div>
+    <div class="row container">
+      <div class="col s12 m12 l12" id="btech">
+       <ul class="collapsible" data-collapsible="accordion">
           <li>
               <div class="collapsible-header"><i class=" material-icons">list</i>Final Years
               </div>
@@ -204,11 +379,9 @@
                   {% endfor %}
                 </ul>
               </div>
-          </li>
-                </ul>
-              </div>
-          </li>
-       </ul>
-     </div-->
+           </li>
+          </ul>
+        </div>
+     </div>
 
   {% endblock %}
